--- a/claims-app/src/App.css
+++ b/claims-app/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.input_box {
+  width: 300px; /* Adjust the width as needed */
+  padding: 10px;
+  margin: 5px;
+  box-sizing: border-box;
+    
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
